--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "desing-agency",
+  "version": "1.0.0",
+  "description": "projeto criado para a pratica de flexbox",
+  "main": "index.js",
+  "scripts": {
+    "sass": "sass --watch css/sass/style.scss css/style.css",
+    "minify-css": "cleancss --watch -o css/style.min.css css/style.css"
+  },
   "devDependencies": {
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "clean-css-cli": "^5.3.2"
   }
 }
