--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "prod": "sass --watch css/style.css css/style.min.css --style compressed"
   },
   "devDependencies": {
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
