--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "desing-agency",
-  "description": "projeto criado para a pratica de flexbox",
+  "description": "website para uma agencia onde o design criado por Femi John, e desenvolvido por Jefferson Souza, utilizando tecnologias HTML, CSS (SASS), JAVASCRIPT, WEBPACK",
   "private": true,
   "scripts": {
-    "dev": "sass --watch css/sass/style.scss css/style.css",
-    "build": "webpack --watch"
+    "dev": "sass css/sass/style.scss css/style.css",
+    "build": "webpack",
+    "start": "webpack serve --mode development"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "node-sass": "^9.0.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
