--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "desing-agency",
-  "description": "website para uma agencia onde o design criado por Femi John, e desenvolvido por Jefferson Souza, utilizando tecnologias HTML, CSS (SASS), JAVASCRIPT, WEBPACK",
+  "description": "Landing page para uma agência de design, criada por Femi John e desenvolvida por Jefferson Souza usando HTML, CSS (SASS), JavaScript e Webpack.",
   "private": true,
   "scripts": {
     "dev": "sass --watch css/sass/style.scss css/style.css",
@@ -8,6 +8,9 @@
     "start": "webpack serve --mode development"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
